--- a/src/index.scss
+++ b/src/index.scss
@@ -16,3 +16,36 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.errmsg {
+  color: #fff;
+  background-color: rgb(243 68 91);
+  width: 100%;
+  padding: 0.5rem;
+  border-radius: 5px;
+  font-weight: 500;
+  margin: 10px auto;
+  display: block;
+}
+
+.button {
+  background: #0D2436;
+  color: #fff;
+  border: none;
+  padding: 0.5em;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+input {
+  margin: 10px 0;
+  padding: 0.5em;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
